Updated typescript version Enabled cors Renamed html component selector

--- a/SimpleWebApp/SimpleWebApp/Views/Home/Index.cshtml
+++ b/SimpleWebApp/SimpleWebApp/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
         System.import('app/boottitlelist');
     </script>
 }
-<titlelist class="titlelistcontent">
+<title-list class="titlelistcontent">
     <div class="waitloading">
         loading...
     </div>
-</titlelist>
+</title-list>
