--- a/SimpleWebApp/SimpleWebApp/app/components/titlelist/titlelist.component.html
+++ b/SimpleWebApp/SimpleWebApp/app/components/titlelist/titlelist.component.html
@@ -15,20 +15,27 @@
         </div>
     </div>-->
     <div class="centercontainer borderedboxlight">
-        <ul class="list-group" *ngIf="titleList">
-            <li class="list-group-item addcontent">
-                <i class="glyphicon glyphicon-plus" (click)="addtask(newtaskctrl)" [ngClass]="{'actionenable' : true}"></i>
-                <input type="text" [(ngModel)]="newtask" class="form-control" ngControl="newtaskctrl" required #newtaskctrl="ngForm"/>
-            </li>
-            <li class="list-group-item" *ngFor="let task of selectedtasks">
+        <ul *ngIf="titles">
+            <li class="list-group-item" *ngFor="let title of titles">
                 <div class="taskwrapper">
-                    <!--<i class="checkicon glyphicon" [ngClass]="{'glyphicon-check' : task.Ended, 'glyphicon-unchecked' : !task.Ended}" (click)="checktask(task)"></i>-->
                     <div>
-                        {{task.Name}}
+                        {{title.TitleName}}
                     </div>
-                    <!--<div class="actionbtn text-danger" (click)="removetask(task)"><i class="glyphicon glyphicon-remove"></i></div>-->
                 </div>
             </li>
         </ul>
+        <!--<ul class="list-group" *ngIf="titleList">
+            <li class="list-group-item addcontent">
+                <i class="glyphicon glyphicon-plus" (click)="addtask(newtaskctrl)" [ngClass]="{'actionenable' : true}"></i>
+                <input type="text" [(ngModel)]="newtask" class="form-control" ngControl="newtaskctrl" required #newtaskctrl="ngForm" />
+            </li>
+            <li class="list-group-item" *ngFor="let task of selectedtasks">
+                <div class="taskwrapper">
+                    <div>
+                        {{task.Name}}
+                    </div>
+                </div>
+            </li>
+        </ul>-->
     </div>
 </form>
