--- a/SimpleWebApp/SimpleWebApp/app/components/titlelist/titlelist.component.html
+++ b/SimpleWebApp/SimpleWebApp/app/components/titlelist/titlelist.component.html
@@ -1,11 +1,21 @@
-﻿<form>
+﻿
+<detail-modal [(visible)]="showDialog">
+    <h1>Hello World</h1>
+    <button (click)="showDialog = !showDialog" class="btn">Close</button>
+</detail-modal>
+<!--<h1 [(visible)]="showDialog"></h1>-->
+
     <div class="centercontainer borderedboxlight">
         <ul *ngIf="titles">
             <li class="list-group-item addcontent">
+                <div flex="5" layout="column" layout-align="center end">
+                    <i class="material-icons">search</i>
+                </div>
                 <!--<i class="glyphicon glyphicon-plus" (click)="addtask(newtaskctrl)" [ngClass]="{'actionenable' : true}"></i>-->
-                <input type="text" [(ngModel)]="newtask" class="form-control" ngControl="newtaskctrl" required #newtaskctrl="ngForm" />
+                <!--<input type="text" [(ngModel)]="newtask" class="form-control" ngControl="newtaskctrl" required #newtaskctrl="ngForm"/>-->
+                <input type="text" class="form-control"/>
             </li>
-            <li class="list-group-item" *ngFor="let title of titles">
+            <li class="list-group-item" *ngFor="let title of titles" (click)="showDialog = true">
                 <div class="taskwrapper">
                     <div>
                         {{title.TitleName}}
@@ -27,4 +37,3 @@
             </li>
         </ul>-->
     </div>
-</form>
